--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!-- data-main attribute tells require.js to load
-		 scripts/game after require.js loads. -->
-	<script data-main="scripts/game" src="scripts/require.js"></script>
+	 scripts/game after require.js loads. -->
+<!--<script data-main="scripts/game" src="scripts/require.js"></script>-->
 
-<canvas id="game" style="border:1px solid black;width:400;height:300;"/>
+<script type="text/javascript" src="scripts/game.js"></script>
+
+<canvas id="game" width="400" height="300" style="border:1px solid black;"/>
