Detects 5 closest dots to mouse click

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 	 scripts/game after require.js loads. -->
 <!--<script data-main="scripts/game" src="scripts/require.js"></script>-->
 
+<script type="text/javascript" src="scripts/kdTree-min.js"></script>
+<script type="text/javascript" src="scripts/js-extensions.js"></script>
+<script type="text/javascript" src="scripts/dot.js"></script>
 <script type="text/javascript" src="scripts/game.js"></script>
 
 <canvas id="game" width="400" height="300" style="border:1px solid black;"/>
