Pressing the mouse button will now spawn more particles.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 <script type="text/javascript" src="scripts/js-extensions.js"></script>
 <script type="text/javascript" src="scripts/dot.js"></script>
 <script type="text/javascript" src="scripts/game.js"></script>
-
+<p>Particles will avoid all other particles and in particular the mouse cursor. Click to create particles.</p>
 <canvas id="game" width="400" height="300" style="border:1px solid black;"/>
