Features * Particles will now merge if they get too close to each other. Bugs * Improved wall bleed prevention.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <script type="text/javascript" src="scripts/kdTree-min.js"></script>
 <script type="text/javascript" src="scripts/js-extensions.js"></script>
+<script type="text/javascript" src="scripts/shims.js"></script>
 <script type="text/javascript" src="scripts/dot.js"></script>
 <script type="text/javascript" src="scripts/game.js"></script>
 <p>Particles will avoid all other particles and in particular the mouse cursor. Click to create particles.</p>
