Reworked energy calculation (display only, doesn't do anything) and changed how particles change directions when hitting the wall.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	 scripts/game after require.js loads. -->
 <!--<script data-main="scripts/game" src="scripts/require.js"></script>-->
 
+<script type="text/javascript" src="scripts/QuadTree.js"></script>
 <script type="text/javascript" src="scripts/kdTree-min.js"></script>
 <script type="text/javascript" src="scripts/js-extensions.js"></script>
 <script type="text/javascript" src="scripts/shims.js"></script>
