--- a/cellAutomata/index.html
+++ b/cellAutomata/index.html
@@ -18,10 +18,11 @@
 				game = new Game();
 
 				document.querySelector("#run").addEventListener('click',function(){game.toggleRun()});
+				document.querySelector("#prune").addEventListener('click',function(){game.topo.prune()});
 				document.querySelector("#FPSGraph").addEventListener('change',function(){game.settings.showFPSGraph = this.checked;});
 
 				game.init();
-				//game.start();
+				game.start();
 			}
 		}
 	);
@@ -46,7 +47,8 @@
 		<label><input type="checkbox" id="FPSGraph" checked/> Show FPS Graph</label>
 	</div>
 	<div>
-		<input type="button" id="run" value="start"/>
+		<input type="button" id="run" value="Start"/>
+		<input type="button" id="prune" value="Prune"/>
 	</div>
 </div>
 <canvas id="canvas" width="400" height="300" style="border:1px solid white;"/>
