Attempting to implement a vector field class.

--- a/cellAutomata/index.html
+++ b/cellAutomata/index.html
@@ -5,6 +5,8 @@
 	document.addEventListener('DOMContentLoaded',function(){
 			var check = new Readycheck();
 			check.loadScript([
+					'scripts/js-extensions.js',
+					'scripts/vfield.js',
 					'scripts/topology.js',
 			    'scripts/cell.js',
 			    'scripts/Timer.js',
