Big update! Currently registers particles and gravitational spread, though the vector field is not really a vector field yet, more like a grid with strength values.

--- a/cellAutomata/index.html
+++ b/cellAutomata/index.html
@@ -53,4 +53,4 @@
 		<input type="button" id="prune" value="Prune"/>
 	</div>
 </div>
-<canvas id="canvas" width="400" height="300" style="border:1px solid white;"/>
+<canvas id="canvas" width="400" height="300" />
