First version of a multi-threaded variant where cells have their forces applied in a worker. Later versions will have more and more threading.

--- a/cellAutomata/index.html
+++ b/cellAutomata/index.html
@@ -8,6 +8,7 @@
 					'scripts/js-extensions.js',
 					'scripts/vfield.js',
 					'scripts/topology.js',
+					'scripts/topologyMaster.js',
 			    'scripts/cell.js',
 			    'scripts/Timer.js',
 					'scripts/QuadTree.js',
