Moved working on field cells to VFieldNode class so it's easier multithreading it.

--- a/cellAutomata/index.html
+++ b/cellAutomata/index.html
@@ -1,5 +1,5 @@
 <head>
-	<script type="text/javascript" src="scripts/Readycheck.js"></script>
+	<script type="text/javascript" src="scripts/ReadyCheck.js"></script>
 	<script>
 	var timer, game;
 	document.addEventListener('DOMContentLoaded',function(){
