--- a/cellAutomata/index.html
+++ b/cellAutomata/index.html
@@ -57,8 +57,8 @@
 <div id="controls">
 	<div style="position:absolute;right:0" id="changetip_tipme_button" data-bid="dF7qbeXaVRnhsihBayYBT4" data-uid="FitdLARFU3zQVWgg9cadXg"></div>
 	<div class="options">
-		<label><input type="checkbox" id="FPSGraph" /> Show FPS Graph</label>
-		<label><input type="checkbox" id="showNodes" /> Show node quads</label>
+		<label><input type="checkbox" id="FPSGraph" disabled /> Show FPS Graph</label>
+		<label><input type="checkbox" id="showNodes" disabled /> Show node quads</label>
 	</div>
 	<div>
 		<input type="button" id="run" value="Run / Pause"/>
